<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_landing_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSplash1"
    tools:context="com.viintro.Viintro.Landing.LandingActivity">

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_above="@+id/relativeBottom">

 <TextView
    android:id="@+id/textLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:text="@string/name"
    android:textSize="@dimen/label_size"
    android:textColor="@color/labelColor"
    android:textStyle="bold"
    />
 </RelativeLayout>


 <RelativeLayout
     android:id="@+id/relativeBottom"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:background="@color/backgroundSplash1"
     android:layout_alignParentBottom="true"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     >

  <LinearLayout
      android:id="@+id/ll_circle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="20dp"
      android:layout_centerHorizontal="true"
      >

   <ImageView
       android:layout_width="12dp"
       android:layout_height="12dp"
       android:background="@drawable/splash_circle_white"
       android:layout_marginRight="10dp"/>
   <ImageView
       android:layout_width="12dp"
       android:layout_height="12dp"
       android:background="@drawable/splash_circle_fade"/>
   <ImageView
       android:layout_width="12dp"
       android:layout_height="12dp"
       android:layout_marginLeft="10dp"
       android:background="@drawable/splash_circle_fade"/>
  </LinearLayout>

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="match_parent"
      android:layout_height="35dp"
      android:text="@string/button_login"
      android:textStyle="bold"
      android:layout_below="@+id/ll_circle"
      android:layout_marginTop="20dp"
      android:textColor="@color/labelColor"
      android:background="@drawable/login_button_background"
      android:textSize="@dimen/login_text_size"
      />

  <Button
      android:id="@+id/textSignUp"
      android:text="@string/text_sign_up"
      android:textColor="@color/labelColor"
      android:textSize="@dimen/signup_text_size"
      android:background="@android:color/transparent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/btnLogin"
      android:layout_marginTop="10dp"
      android:layout_centerHorizontal="true"/>
  </RelativeLayout>
</RelativeLayout>
