<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_landing_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSplash2"
    tools:context="com.viintro.Viintro.Landing.LandingActivity">

    <RelativeLayout
        android:id="@+id/relativeTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="@color/backgroundSplash1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_videos"
            android:textColor="@color/sampleVideostextColor"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relativeMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeTop"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_above="@+id/relativeBottom">

        <GridView
            android:id="@+id/videoGridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:verticalSpacing="5dp"
            android:horizontalSpacing="5dp"
            android:stretchMode="columnWidth"
            android:layout_centerInParent="true"
            >

        </GridView>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relativeBottom"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/backgroundSplash1"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        >
        <LinearLayout
            android:id="@+id/ll_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/splash_circle_fade"
                android:layout_marginRight="10dp"/>
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/splash_circle_fade"/>
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/splash_circle_white"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/button_login"
            android:textStyle="bold"
            android:layout_below="@+id/ll_circle"
            android:layout_marginTop="20dp"
            android:textColor="@color/labelColor"
            android:background="@drawable/login_button_background"
            android:textSize="@dimen/login_text_size"
            />

        <Button
            android:id="@+id/textSignUp"
            android:text="@string/text_sign_up"
            android:textColor="@color/labelColor"
            android:textSize="@dimen/signup_text_size"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
